--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -433,8 +433,8 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: cyan;
-    background: url("../images/body_bg.jpg") no-repeat;
-    background-size: cover;
+    background: url("../images/body_bg.jpg") repeat-y;
+    background-size: contain;
 }
 
 p {
@@ -492,7 +492,7 @@ header h2 {
 
 #main-content {
     float: left;
-    width: 690px;
+    width: 100%;
 }
 
 #main-content img {
@@ -792,11 +792,11 @@ footer a:hover {
     }
 
     header h1 {
-        font-size: 60px;
+        font-size: 46px;
     }
 
     header h2 {
-        font-size: 30px;
+        font-size: 22px;
     }
 
     #main-content {
