--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -493,7 +493,7 @@ header h2 {
 
 #main-content {
     float: left;
-    width: 80%;
+    width: 79%;
 }
 
 #main-content img {
@@ -781,7 +781,9 @@ footer a:hover {
     z-index: 2;
     margin-top: 30px;
 }
-
+.accordion a {
+    font-size:15px;
+}
 .accordion h4::before {
     content: "";
     /*display: none;*/
